* Wed Jun 21 2023 15:57:02 +0000 Manvendra Bhangui <@email@> @version@-@release@%{?dist}
- 23/08/2015
1.  Added pilcd command, lcd-daemon server
2.  Created lcd daemon package
- 21/06/2023
3.  First public release
- 23/06/2023
4.  Specifying bits, cols, rows moved to lcd-daemon from pilcd
5.  lcd-daemon.c: Added startup, shutdown message
6.  configure.ac: corrected bugreport address
7.  lcd-daemon.c, pilcd.c, lcdPrint.c: interchanged rownum and scroll fields
8.  lcd-daemon.c: prevent row number to be greater than rows supported by LCD
- 21/04/2024
9.  added notify-daemon.c, pinotify.c
- 18/02/2025
10. Added -T argument, DISPLAY_TIMEOUT env variable for the time in seconds
    notify-send will display message.
- 18/05/2025
11. Fix gcc14 errors for lcd-daemon.c, notify-daemon.c, pilcd.c, pinotify.c,
    substdio.h
12. lcd-daemon.c, notify-daemon.c: Fixed argument type for get_octal()