@@ -9,4 +9,4 @@ Debtransform-Release: 1
 Debtransform-Files-Tar: debian.tar.gz
 Debtransform-Tar: lcd-daemon-@version@.tar.gz
 Standards-Version: 3.9.1
-Build-Depends: cdbs, debhelper (>= 9), gcc, binutils, coreutils, automake, autoconf, m4, gawk, libwiringpi-dev, libwiringpidev-dev
+Build-Depends: cdbs, debhelper (>= 9), gcc, binutils, coreutils, automake, autoconf, m4, gawk, libqmail-dev, libwiringpi-dev, libwiringpidev-dev
